refactor :: UserRegisterService.java